--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="bn">
 <head>
-    <title>Aset Amta Website</title>
+  <meta charset="UTF-8">
+  <title>Aset Amta Computer Center</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>স্বাগতম Aset Amta-তে!</h1>
-    <p>এটাই আমার ওয়েবসাইটের প্রথম পেজ।</p>
+
+<header>
+  <h1>Aset Amta Computer Center</h1>
+  <p>Amta-র সেরা কম্পিউটার প্রশিক্ষণ কেন্দ্র</p>
+</header>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<section>
+  <h2>আমাদের কোর্সসমূহ</h2>
+  <ul>
+    <li>Basic Computer</li>
+    <li>Tally with GST</li>
+    <li>Spoken English</li>
+    <li>Hardware & Networking</li>
+  </ul>
+</section>
+
+<footer>
+  <p>© 2026 Aset Amta</p>
+</footer>
+
 </body>
 </html>
